--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ documentation = "https://astropenguin.github.io/pandas-dataclasses/"
 [tool.poetry.dependencies]
 python = ">=3.7.1, <3.11"
 morecopy = "^0.2"
+numpy = "^1.20"
 pandas = "^1.3"
 typing-extensions = "^3.10"
 
