--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,17 +12,32 @@ documentation = "https://astropenguin.github.io/pandas-dataclasses/"
 [tool.poetry.dependencies]
 python = ">=3.7.1, <3.11"
 morecopy = "^0.2"
-numpy = "^1.20"
-pandas = "^1.3"
+numpy = [
+    { version = ">=1.20, <1.22", python = ">=3.7.1, <3.8" },
+    { version = "^1.20", python = ">=3.8, <3.11" },
+]
+pandas = [
+    { version = ">=1.3, <1.4", python = ">=3.7.1, <3.8" },
+    { version = "^1.3", python = ">=3.8, <3.11" },
+]
 typing-extensions = "^3.10"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3"
-ipython = "^7.32"
+ipython = [
+    { version = "^7.32", python = ">=3.7.1, <3.8" },
+    { version = "^8.2", python = ">=3.8, <3.11" },
+]
 myst-parser = "^0.17"
+pandas-stubs = "^1.2"
 pydata-sphinx-theme = "^0.8"
+pyright = "^1.1"
 pytest = "^7.1"
 sphinx = "^4.5"
+
+[tool.pyright]
+reportUnknownMemberType = "warning"
+typeCheckingMode = "strict"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
