--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ pytest = "^7.1"
 sphinx = "^4.5"
 
 [tool.pyright]
+reportUnknownArgumentType = "warning"
 reportUnknownMemberType = "warning"
+reportUnknownVariableType = "warning"
 typeCheckingMode = "strict"
 
 [build-system]
