--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ documentation = "https://astropenguin.github.io/pandas-dataclasses/"
 [tool.poetry.dependencies]
 python = ">=3.7.1, <3.11"
 morecopy = "^0.2"
+more-itertools = "^8.12"
 numpy = [
     { version = ">=1.20, <1.22", python = ">=3.7.1, <3.8" },
     { version = "^1.20", python = ">=3.8, <3.11" },
