--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pandas-dataclasses"
 version = "0.4.0"
-description = "pandas extension for typed Series and DataFrame creation"
+description = "pandas data creation made easy by dataclass"
 authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
 keywords = ["pandas", "dataclass", "series", "dataframe", "typing"]
 license = "MIT"
