--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ pandas = [
 ]
 typing-extensions = "^4.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^22.6"
 ipython = [
     { version = "^7.34", python = ">=3.7.1, <3.8" },
@@ -42,5 +42,5 @@ reportUnknownVariableType = "warning"
 typeCheckingMode = "strict"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
