--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ ipython = [
     { version = "<8.0", python = ">=3.7.1, <3.8" },
     { version = "^8.0", python = ">=3.8, <3.11" },
 ]
+mypy = "^0.971"
 myst-parser = "^0.18"
 pandas-stubs = "^1.2"
 pydata-sphinx-theme = "^0.9"
