--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ sphinx = "^5.1"
 reportUnknownArgumentType = "warning"
 reportUnknownMemberType = "warning"
 reportUnknownVariableType = "warning"
+reportUnnecessaryIsInstance = "warning"
 typeCheckingMode = "strict"
 
 [build-system]
