--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ pandas = [
     { version = ">=1.2, <1.4", python = ">=3.7.1, <3.8" },
     { version = "^1.2", python = ">=3.8, <3.11" },
 ]
+pandas-stubs = [
+    { version = ">=1.2, <1.4", python = ">=3.7.1, <3.8" },
+    { version = "^1.2", python = ">=3.8, <3.11" },
+]
 typing-extensions = ">=3.10, <5.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -29,7 +33,6 @@ ipython = [
 ]
 mypy = "^0.982"
 myst-parser = "^0.18"
-pandas-stubs = "^1.2"
 pydata-sphinx-theme = "^0.9"
 pyright = "^1.1"
 pytest = "^7.1"
