--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,27 +10,15 @@ homepage = "https://github.com/astropenguin/pandas-dataclasses/"
 documentation = "https://astropenguin.github.io/pandas-dataclasses/"
 
 [tool.poetry.dependencies]
-python = ">=3.7.1, <3.11"
-numpy = [
-    { version = ">=1.20, <1.22", python = ">=3.7.1, <3.8" },
-    { version = "^1.20", python = ">=3.8, <3.11" },
-]
-pandas = [
-    { version = ">=1.2, <1.4", python = ">=3.7.1, <3.8" },
-    { version = "^1.2", python = ">=3.8, <3.11" },
-]
-pandas-stubs = [
-    { version = ">=1.2, <1.4", python = ">=3.7.1, <3.8" },
-    { version = "^1.2", python = ">=3.8, <3.11" },
-]
+python = ">=3.8, <3.11"
+numpy = "^1.20"
+pandas = "^1.2"
+pandas-stubs = "^1.2"
 typing-extensions = ">=3.10, <5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10"
-ipython = [
-    { version = "<8.0", python = ">=3.7.1, <3.8" },
-    { version = "^8.6", python = ">=3.8, <3.11" },
-]
+ipython = "^8.6"
 mypy = "^0.982"
 myst-parser = "^0.18"
 pydata-sphinx-theme = "^0.12"
