#138 Update tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["3.7", "3.8", "3.9", "3.10"]
+        python: ["3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -29,10 +29,8 @@ jobs:
         run: black --check docs tests pandas_dataclasses
       - name: Test code's typing (Pyright)
         run: pyright docs tests pandas_dataclasses
-        if: ${{ matrix.python != '3.7' }}
       - name: Test code's typing (mypy)
         run: mypy docs tests pandas_dataclasses
-        if: ${{ matrix.python != '3.7' }}
       - name: Test code's execution (pytest)
         run: pytest -v tests
       - name: Test docs' building (Sphinx)
