--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -9,12 +9,10 @@ jobs:
   job:
     name: PyPI
     runs-on: ubuntu-latest
+    container: ghcr.io/astral-sh/uv:python3.12-bookworm
     env:
-      POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+      UV_PROJECT_ENVIRONMENT: /usr/local
+      UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.13"
-      - name: Publish package to PyPI
-        run: pip install poetry==1.8.5 && poetry publish --build
+      - run: uv build && uv publish
