--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,29 +10,25 @@ on:
 
 jobs:
   job:
-    name: Test (Python ${{ matrix.python }})
+    name: Test (${{ matrix.env }})
     runs-on: ubuntu-latest
+    container: ghcr.io/astral-sh/uv:${{ matrix.env }}
     env:
-      POETRY_VIRTUALENVS_CREATE: false
+      PYTHON_DIRS: docs tests pandas_dataclasses
+      UV_PROJECT_ENVIRONMENT: /usr/local
     strategy:
       fail-fast: false
       matrix:
-        python: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        env:
+          - python3.9-bookworm
+          - python3.10-bookworm
+          - python3.11-bookworm
+          - python3.12-bookworm
+          - python3.13-bookworm
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Install project dependencies
-        run: pip install poetry==1.8.5 && poetry install
-      - name: Test code's formatting (Black)
-        run: black --check docs tests pandas_dataclasses
-      - name: Test code's typing (Pyright)
-        run: pyright docs tests pandas_dataclasses
-      - name: Test code's typing (mypy)
-        run: mypy docs tests pandas_dataclasses
-      - name: Test code's execution (pytest)
-        run: pytest -v tests
-      - name: Test docs' building (Sphinx)
-        if: ${{ matrix.python != '3.9' }}
-        run: docs/build
+      - run: uv sync --frozen
+      - run: black --check ${PYTHON_DIRS}
+      - run: pyright ${PYTHON_DIRS}
+      - run: pytest -v
+      - run: docs/build
