--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,51 @@
-[tool.poetry]
+[project]
 name = "pandas-dataclasses"
-version = "0.13.0"
-description = "pandas data creation made easy by dataclass"
-authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
-keywords = ["pandas", "dataclass", "series", "dataframe", "typing"]
-license = "MIT"
+version = "1.0.0"
+description = "pandas data creation by data classes"
 readme = "README.md"
-repository = "https://github.com/astropenguin/pandas-dataclasses/"
-documentation = "https://astropenguin.github.io/pandas-dataclasses/"
+keywords = ["dataclasses", "specifications", "typing", "pandas"]
+requires-python = ">=3.9,<3.14"
+dependencies = [
+    "numpy>=1.22,<3.0",
+    "pandas>=1.5,<3.0",
+    "pandas-stubs>=1.5,<3.0",
+    "typing-extensions>=4.1,<5.0",
+]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.9, <3.14"
-numpy = ">=1.22, <3.0"
-pandas = ">=1.5, <3.0"
-pandas-stubs = ">=1.5, <3.0"
-typing-extensions = "^4.0"
+[[project.authors]]
+name = "Akio Taniguchi"
+email = "taniguchi.akio@gmail.com"
 
-[tool.poetry.group.dev.dependencies]
-black = "^24.10"
-ipython = "^8.18"
-mypy = "~1.4"
-myst-parser = "^3.0"
-pydata-sphinx-theme = "^0.16"
-pyright = "^1.1"
-pytest = "^8.2"
-sphinx = "^7.4"
+[project.license]
+file = "LICENSE"
 
-[tool.mypy]
-strict = true
-warn_no_return = false
-warn_unused_ignores = false
+[project.urls]
+homepage = "https://astropenguin.github.io/pandas-dataclasses/v1.0.0"
+repository = "https://github.com/astropenguin/pandas-dataclasses"
+
+[dependency-groups]
+dev = [
+    "black>=24.8",
+    "ipython>=8.18",
+    "myst-parser>=3.0",
+    "pydata-sphinx-theme>=0.16",
+    "pyright>=1.1",
+    "pytest>=8.3",
+    "sphinx>=7.4",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pyright]
 reportUnknownArgumentType = "warning"
@@ -37,7 +53,3 @@ reportUnknownMemberType = "warning"
 reportUnknownVariableType = "warning"
 reportUnnecessaryIsInstance = "warning"
 typeCheckingMode = "strict"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
