#172 Fix workflow for testing

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,3 +32,4 @@ jobs:
       - run: pyright ${PYTHON_DIRS}
       - run: pytest -v
       - run: docs/build
+        if: ${{ matrix.env != 'python3.9-bookworm' }}
